refractor of ocean3d

--- a/notebooks/diagnostics/ocean3d/ocean_circulation.ipynb
+++ b/notebooks/diagnostics/ocean3d/ocean_circulation.ipynb
@@ -18,11 +18,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/sgosh/miniconda3/envs/aqua/lib/python3.12/site-packages/h5py/__init__.py:36: UserWarning: h5py is running against HDF5 1.14.3 when it was built against 1.14.4, this may cause problems\n",
+      "  _warn((\"h5py is running against HDF5 {0} when it was built against {1}, \"\n"
+     ]
+    },
+    {
+     "ename": "ImportError",
+     "evalue": "/home/sgosh/miniconda3/envs/aqua/lib/python3.12/site-packages/h5py/h5t.cpython-312-x86_64-linux-gnu.so: undefined symbol: H5T_IEEE_F16BE_g",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mImportError\u001b[39m                               Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 8\u001b[39m\n\u001b[32m      6\u001b[39m get_ipython().run_line_magic(\u001b[33m'\u001b[39m\u001b[33mload_ext\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mautoreload\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m      7\u001b[39m get_ipython().run_line_magic(\u001b[33m'\u001b[39m\u001b[33mautoreload\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33m2\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m----> \u001b[39m\u001b[32m8\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01maqua\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m Reader\n\u001b[32m      9\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01maqua\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mdiagnostics\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mocean3d\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m load_obs_data\n\u001b[32m     10\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01maqua\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mdiagnostics\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mocean3d\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m check_variable_name\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/myproject/AQUA/src/aqua/__init__.py:3\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[33;03m\"\"\"AQUA module\"\"\"\u001b[39;00m\n\u001b[32m      2\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01m.\u001b[39;00m\u001b[34;01mversion\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m __version__\n\u001b[32m----> \u001b[39m\u001b[32m3\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01m.\u001b[39;00m\u001b[34;01mgraphics\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m plot_single_map, plot_maps, plot_single_map_diff, plot_timeseries\n\u001b[32m      4\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01m.\u001b[39;00m\u001b[34;01mgraphics\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m plot_hovmoller\n\u001b[32m      5\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01m.\u001b[39;00m\u001b[34;01mlra_generator\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m LRAgenerator\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/myproject/AQUA/src/aqua/graphics/__init__.py:17\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[33;03m\"\"\"\u001b[39;00m\n\u001b[32m      2\u001b[39m \u001b[33;03mGraphics module for Aqua.\u001b[39;00m\n\u001b[32m      3\u001b[39m \n\u001b[32m   (...)\u001b[39m\u001b[32m     15\u001b[39m \u001b[33;03m- plot_maps: Plot multiple maps using plot_single_map\u001b[39;00m\n\u001b[32m     16\u001b[39m \u001b[33;03m\"\"\"\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m17\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01m.\u001b[39;00m\u001b[34;01mhovmoller\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m plot_hovmoller\n\u001b[32m     18\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01m.\u001b[39;00m\u001b[34;01msingle_map\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m plot_single_map, plot_single_map_diff\n\u001b[32m     19\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01m.\u001b[39;00m\u001b[34;01mstyles\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m ConfigStyle\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/myproject/AQUA/src/aqua/graphics/hovmoller.py:10\u001b[39m\n\u001b[32m      7\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mnumpy\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mnp\u001b[39;00m\n\u001b[32m      8\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mxarray\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mxr\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m10\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01maqua\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mutil\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m create_folder, evaluate_colorbar_limits\n\u001b[32m     11\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01maqua\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mlogger\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m log_configure\n\u001b[32m     13\u001b[39m \u001b[38;5;66;03m# set default options for xarray\u001b[39;00m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/myproject/AQUA/src/aqua/util/__init__.py:19\u001b[39m\n\u001b[32m     17\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01m.\u001b[39;00m\u001b[34;01mtime\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m time_to_string\n\u001b[32m     18\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01m.\u001b[39;00m\u001b[34;01mcoord\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m flip_lat_dir, find_lat_dir, check_direction\n\u001b[32m---> \u001b[39m\u001b[32m19\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01m.\u001b[39;00m\u001b[34;01mzarr\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m create_zarr_reference\n\u001b[32m     20\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01m.\u001b[39;00m\u001b[34;01moutput_saver\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m OutputSaver\n\u001b[32m     22\u001b[39m __all__ = [\u001b[33m'\u001b[39m\u001b[33mConfigPath\u001b[39m\u001b[33m'\u001b[39m,\n\u001b[32m     23\u001b[39m            \u001b[33m'\u001b[39m\u001b[33mread_eccodes_def\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mget_eccodes_attr\u001b[39m\u001b[33m'\u001b[39m,\n\u001b[32m     24\u001b[39m            \u001b[33m'\u001b[39m\u001b[33mnormalize_units\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mconvert_units\u001b[39m\u001b[33m'\u001b[39m,\n\u001b[32m   (...)\u001b[39m\u001b[32m     37\u001b[39m            \u001b[33m'\u001b[39m\u001b[33mflip_lat_dir\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mfind_lat_dir\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mcheck_direction\u001b[39m\u001b[33m'\u001b[39m,\n\u001b[32m     38\u001b[39m            \u001b[33m'\u001b[39m\u001b[33mcreate_zarr_reference\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mOutputSaver\u001b[39m\u001b[33m'\u001b[39m]\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/myproject/AQUA/src/aqua/util/zarr.py:6\u001b[39m\n\u001b[32m      4\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mjson\u001b[39;00m\n\u001b[32m      5\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mxarray\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mxr\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m6\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mkerchunk\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mhdf\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m SingleHdf5ToZarr\n\u001b[32m      7\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mkerchunk\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mcombine\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m MultiZarrToZarr\n\u001b[32m      8\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01maqua\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mlogger\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m log_configure\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/miniconda3/envs/aqua/lib/python3.12/site-packages/kerchunk/hdf.py:22\u001b[39m\n\u001b[32m     14\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01m.\u001b[39;00m\u001b[34;01mutils\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m (\n\u001b[32m     15\u001b[39m     _encode_for_JSON,\n\u001b[32m     16\u001b[39m     encode_fill_value,\n\u001b[32m     17\u001b[39m     dict_to_store,\n\u001b[32m     18\u001b[39m     translate_refs_serializable,\n\u001b[32m     19\u001b[39m )\n\u001b[32m     21\u001b[39m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[32m---> \u001b[39m\u001b[32m22\u001b[39m     \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mh5py\u001b[39;00m\n\u001b[32m     23\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mModuleNotFoundError\u001b[39;00m:  \u001b[38;5;66;03m# pragma: no cover\u001b[39;00m\n\u001b[32m     24\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mImportError\u001b[39;00m(\n\u001b[32m     25\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mh5py is required for kerchunking HDF5/NetCDF4 files. Please install with \u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m     26\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33m`pip/conda install h5py`. See https://docs.h5py.org/en/latest/build.html \u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m     27\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mfor more details.\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m     28\u001b[39m     )\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/miniconda3/envs/aqua/lib/python3.12/site-packages/h5py/__init__.py:45\u001b[39m\n\u001b[32m     36\u001b[39m     _warn((\u001b[33m\"\u001b[39m\u001b[33mh5py is running against HDF5 \u001b[39m\u001b[38;5;132;01m{0}\u001b[39;00m\u001b[33m when it was built against \u001b[39m\u001b[38;5;132;01m{1}\u001b[39;00m\u001b[33m, \u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m     37\u001b[39m            \u001b[33m\"\u001b[39m\u001b[33mthis may cause problems\u001b[39m\u001b[33m\"\u001b[39m).format(\n\u001b[32m     38\u001b[39m             \u001b[33m'\u001b[39m\u001b[38;5;132;01m{0}\u001b[39;00m\u001b[33m.\u001b[39m\u001b[38;5;132;01m{1}\u001b[39;00m\u001b[33m.\u001b[39m\u001b[38;5;132;01m{2}\u001b[39;00m\u001b[33m'\u001b[39m.format(*version.hdf5_version_tuple),\n\u001b[32m     39\u001b[39m             \u001b[33m'\u001b[39m\u001b[38;5;132;01m{0}\u001b[39;00m\u001b[33m.\u001b[39m\u001b[38;5;132;01m{1}\u001b[39;00m\u001b[33m.\u001b[39m\u001b[38;5;132;01m{2}\u001b[39;00m\u001b[33m'\u001b[39m.format(*version.hdf5_built_version_tuple)\n\u001b[32m     40\u001b[39m     ))\n\u001b[32m     43\u001b[39m _errors.silence_errors()\n\u001b[32m---> \u001b[39m\u001b[32m45\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01m.\u001b[39;00m\u001b[34;01m_conv\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m register_converters \u001b[38;5;28;01mas\u001b[39;00m _register_converters, \\\n\u001b[32m     46\u001b[39m                    unregister_converters \u001b[38;5;28;01mas\u001b[39;00m _unregister_converters\n\u001b[32m     47\u001b[39m _register_converters()\n\u001b[32m     48\u001b[39m atexit.register(_unregister_converters)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mh5py/_conv.pyx:1\u001b[39m, in \u001b[36minit h5py._conv\u001b[39m\u001b[34m()\u001b[39m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mh5py/h5r.pyx:1\u001b[39m, in \u001b[36minit h5py.h5r\u001b[39m\u001b[34m()\u001b[39m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mh5py/h5p.pyx:1\u001b[39m, in \u001b[36minit h5py.h5p\u001b[39m\u001b[34m()\u001b[39m\n",
+      "\u001b[31mImportError\u001b[39m: /home/sgosh/miniconda3/envs/aqua/lib/python3.12/site-packages/h5py/h5t.cpython-312-x86_64-linux-gnu.so: undefined symbol: H5T_IEEE_F16BE_g"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "#sys.path.insert(0, '../..')\n",
@@ -31,11 +69,11 @@
     "\n",
     "%load_ext autoreload\n",
     "%autoreload 2\n",
-    "from aqua import Reader,catalogue, inspect_catalogue\n",
-    "from ocean3d import load_obs_data\n",
-    "from ocean3d import check_variable_name\n",
-    "from ocean3d import stratification\n",
-    "from ocean3d import plot_spatial_mld_clim \n",
+    "from aqua import Reader\n",
+    "from aqua.diagnostics.ocean3d import load_obs_data\n",
+    "from aqua.diagnostics.ocean3d import check_variable_name\n",
+    "from aqua.diagnostics import stratification\n",
+    "from aqua.diagnostics import mld \n",
     "from aqua.util import load_yaml"
    ]
   },
@@ -1978,7 +2016,7 @@
   "kernelspec": {
    "display_name": "aqua",
    "language": "python",
-   "name": "aqua"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1990,7 +2028,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
