LRA notebook rename and first adjustments

--- a/notebooks/drop/drop.ipynb
+++ b/notebooks/drop/drop.ipynb
@@ -5,10 +5,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# The LRA generator class\n",
+    "# The DROP class\n",
     "\n",
-    "This is a basic notebook to show how the LRA generator is built.\n",
-    "Please note that this is a very intensive operation in terms of time and memory. It is recommended to use the command line interface (CLI) - the `cli_lra_generator.py` for doing any of the following operations."
+    "This is a basic notebook to show how the DROP (Data Reduction OPerator), for the LRA generation, is built.\n",
+    "Please note that this is a very intensive operation in terms of time and memory. It is recommended to use the command line interface (CLI) - the `drop.py` in `AQUA/src/aqua/cli` for doing any of the following operations."
    ]
   },
   {
@@ -17,7 +17,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from aqua import LRAgenerator\n",
+    "%reload_ext autoreload\n",
+    "%autoreload 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/LUMI_TYKKY_vLfLTcc/miniforge/envs/env1/lib/python3.12/site-packages/intake_esm/__init__.py:6: UserWarning: pkg_resources is deprecated as an API. See https://setuptools.pypa.io/en/latest/pkg_resources.html. The pkg_resources package is slated for removal as early as 2025-11-30. Refrain from using this package or pin to Setuptools<81.\n",
+      "  from pkg_resources import DistributionNotFound, get_distribution\n"
+     ]
+    }
+   ],
+   "source": [
+    "from aqua import DROP\n",
     "from aqua.util import ConfigPath, username"
    ]
   },
@@ -31,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,13 +59,13 @@
     "source = 'daily'\n",
     "\n",
     "user = username()\n",
-    "outdir = f'/scratch/b/{user}/test_lra/'\n",
+    "outdir = f'/scratch/b/{user}/test_drop/'\n",
     "\n",
     "\n",
     "if ConfigPath().get_machine()=='levante':\n",
-    "    outdir = f'/scratch/b/{user}/test_lra/'\n",
+    "    outdir = f'/scratch/b/{user}/test_drop/'\n",
     "elif ConfigPath().get_machine()=='lumi':\n",
-    "    outdir = f'/users/{user}/scratch/test_lra/'"
+    "    outdir = f'/users/{user}/scratch/test_drop/'"
    ]
   },
   {
@@ -60,58 +79,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[38;2;255;165;0m2024-02-15 17:33:32 :: lra_generator :: WARNING  -> IMPORTANT: no file will be created, this is a dry run\u001b[0m\n",
-      "\u001b[38;2;64;184;50m2024-02-15 17:33:32 :: lra_generator :: INFO     -> Variable(s) to be processed: mtnlwrf\u001b[0m\n",
-      "\u001b[38;2;64;184;50m2024-02-15 17:33:32 :: lra_generator :: INFO     -> Fixing data: True\u001b[0m\n",
-      "\u001b[38;2;64;184;50m2024-02-15 17:33:32 :: create_folder :: INFO     -> Folder /users/nazarova/scratch/test_lra/ERA5/era5/r100/monthly already exists\u001b[0m\n",
-      "\u001b[38;2;64;184;50m2024-02-15 17:33:33 :: Reader :: INFO     -> Fix names in metadata is ERA5-destine-v1\u001b[0m\n",
-      "\u001b[38;2;64;184;50m2024-02-15 17:33:33 :: Reader :: INFO     -> Fix names ERA5-destine-v1 found in fixes files\u001b[0m\n",
-      "\u001b[38;2;64;184;50m2024-02-15 17:33:33 :: Reader :: INFO     -> Grid metadata is era5-r025\u001b[0m\n",
-      "\u001b[38;2;64;184;50m2024-02-15 17:33:37 :: lra_generator :: INFO     -> Accessing catalog for ERA5-era5-daily...\u001b[0m\n",
-      "\u001b[38;2;64;184;50m2024-02-15 17:33:37 :: lra_generator :: INFO     -> I am going to produce LRA at r100 resolution and monthly frequency...\u001b[0m\n",
-      "\u001b[38;2;64;184;50m2024-02-15 17:33:37 :: lra_generator :: INFO     -> Retrieving data...\u001b[0m\n",
-      "\u001b[38;2;64;184;50m2024-02-15 17:33:37 :: Reader :: INFO     -> Retrieving variables: ['mtnlwrf']\u001b[0m\n",
-      "\u001b[38;2;64;184;50m2024-02-15 17:33:37 :: Reader :: INFO     -> Variables to be fixed: {'mtnlwrf': {'src_units': 'J m**-2 day**-1', 'source': 'TTR', 'grib': True}}\u001b[0m\n",
-      "\u001b[38;2;64;184;50m2024-02-15 17:33:37 :: Reader :: INFO     -> mtnlwrf: converting units J m**-2 day**-1 --> W m**-2\u001b[0m\n",
-      "\u001b[38;2;64;184;50m2024-02-15 17:33:37 :: Reader :: INFO     -> coordinates adjusted to cf by AQUA fixer\u001b[0m\n",
-      "\u001b[38;2;64;184;50m2024-02-15 17:33:37 :: lra_generator :: INFO     -> Generating LRA data...\u001b[0m\n",
-      "\u001b[38;2;64;184;50m2024-02-15 17:33:37 :: lra_generator :: INFO     -> Processing variable mtnlwrf...\u001b[0m\n",
-      "\u001b[38;2;64;184;50m2024-02-15 17:33:37 :: Reader :: INFO     -> Resampling to MS frequency...\u001b[0m\n",
-      "\u001b[38;2;64;184;50m2024-02-15 17:33:37 :: lra_generator :: INFO     -> Processing year 2020...\u001b[0m\n",
-      "\u001b[38;2;64;184;50m2024-02-15 17:33:37 :: file_is_complete :: INFO     -> File /users/nazarova/scratch/test_lra/ERA5/era5/r100/monthly/mtnlwrf_era5_r100_monthly_2020.nc not found...\u001b[0m\n",
-      "\u001b[38;2;64;184;50m2024-02-15 17:33:37 :: lra_generator :: INFO     -> Processing month 1...\u001b[0m\n",
-      "\u001b[38;2;64;184;50m2024-02-15 17:33:37 :: file_is_complete :: INFO     -> File /users/nazarova/scratch/test_lra/ERA5/era5/r100/monthly/mtnlwrf_era5_r100_monthly_202001.nc not found...\u001b[0m\n",
-      "\u001b[38;2;64;184;50m2024-02-15 17:34:56 :: lra_generator :: INFO     -> Processing month 2...\u001b[0m\n",
-      "\u001b[38;2;64;184;50m2024-02-15 17:34:56 :: file_is_complete :: INFO     -> File /users/nazarova/scratch/test_lra/ERA5/era5/r100/monthly/mtnlwrf_era5_r100_monthly_202002.nc not found...\u001b[0m\n",
-      "\u001b[38;2;64;184;50m2024-02-15 17:35:34 :: lra_generator :: INFO     -> Processing month 3...\u001b[0m\n",
-      "\u001b[38;2;64;184;50m2024-02-15 17:35:34 :: file_is_complete :: INFO     -> File /users/nazarova/scratch/test_lra/ERA5/era5/r100/monthly/mtnlwrf_era5_r100_monthly_202003.nc not found...\u001b[0m\n",
-      "\u001b[38;2;64;184;50m2024-02-15 17:36:32 :: lra_generator :: INFO     -> Processing month 4...\u001b[0m\n",
-      "\u001b[38;2;64;184;50m2024-02-15 17:36:32 :: file_is_complete :: INFO     -> File /users/nazarova/scratch/test_lra/ERA5/era5/r100/monthly/mtnlwrf_era5_r100_monthly_202004.nc not found...\u001b[0m\n",
-      "\u001b[38;2;64;184;50m2024-02-15 17:37:40 :: lra_generator :: INFO     -> Processing month 5...\u001b[0m\n",
-      "\u001b[38;2;64;184;50m2024-02-15 17:37:40 :: file_is_complete :: INFO     -> File /users/nazarova/scratch/test_lra/ERA5/era5/r100/monthly/mtnlwrf_era5_r100_monthly_202005.nc not found...\u001b[0m\n",
-      "\u001b[38;2;64;184;50m2024-02-15 17:38:45 :: lra_generator :: INFO     -> Processing month 6...\u001b[0m\n",
-      "\u001b[38;2;64;184;50m2024-02-15 17:38:45 :: file_is_complete :: INFO     -> File /users/nazarova/scratch/test_lra/ERA5/era5/r100/monthly/mtnlwrf_era5_r100_monthly_202006.nc not found...\u001b[0m\n",
-      "\u001b[38;2;64;184;50m2024-02-15 17:39:47 :: lra_generator :: INFO     -> Processing month 7...\u001b[0m\n",
-      "\u001b[38;2;64;184;50m2024-02-15 17:39:47 :: file_is_complete :: INFO     -> File /users/nazarova/scratch/test_lra/ERA5/era5/r100/monthly/mtnlwrf_era5_r100_monthly_202007.nc not found...\u001b[0m\n",
-      "\u001b[38;2;64;184;50m2024-02-15 17:40:08 :: lra_generator :: INFO     -> Processing month 8...\u001b[0m\n",
-      "\u001b[38;2;64;184;50m2024-02-15 17:40:08 :: file_is_complete :: INFO     -> File /users/nazarova/scratch/test_lra/ERA5/era5/r100/monthly/mtnlwrf_era5_r100_monthly_202008.nc not found...\u001b[0m\n",
-      "\u001b[38;2;64;184;50m2024-02-15 17:41:09 :: lra_generator :: INFO     -> Processing month 9...\u001b[0m\n",
-      "\u001b[38;2;64;184;50m2024-02-15 17:41:09 :: file_is_complete :: INFO     -> File /users/nazarova/scratch/test_lra/ERA5/era5/r100/monthly/mtnlwrf_era5_r100_monthly_202009.nc not found...\u001b[0m\n",
-      "\u001b[38;2;64;184;50m2024-02-15 17:42:16 :: lra_generator :: INFO     -> Processing month 10...\u001b[0m\n",
-      "\u001b[38;2;64;184;50m2024-02-15 17:42:16 :: file_is_complete :: INFO     -> File /users/nazarova/scratch/test_lra/ERA5/era5/r100/monthly/mtnlwrf_era5_r100_monthly_202010.nc not found...\u001b[0m\n",
-      "\u001b[38;2;64;184;50m2024-02-15 17:43:34 :: lra_generator :: INFO     -> Processing month 11...\u001b[0m\n",
-      "\u001b[38;2;64;184;50m2024-02-15 17:43:34 :: file_is_complete :: INFO     -> File /users/nazarova/scratch/test_lra/ERA5/era5/r100/monthly/mtnlwrf_era5_r100_monthly_202011.nc not found...\u001b[0m\n",
-      "\u001b[38;2;64;184;50m2024-02-15 17:44:38 :: lra_generator :: INFO     -> Processing month 12...\u001b[0m\n",
-      "\u001b[38;2;64;184;50m2024-02-15 17:44:38 :: file_is_complete :: INFO     -> File /users/nazarova/scratch/test_lra/ERA5/era5/r100/monthly/mtnlwrf_era5_r100_monthly_202012.nc not found...\u001b[0m\n",
-      "\u001b[38;2;64;184;50m2024-02-15 17:45:27 :: lra_generator :: INFO     -> Process took 710.0271 seconds\u001b[0m\n",
-      "\u001b[38;2;64;184;50m2024-02-15 17:45:27 :: lra_generator :: INFO     -> Finished generating LRA data.\u001b[0m\n"
+     "ename": "KeyError",
+     "evalue": "'Please specify catalog.'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mKeyError\u001b[39m                                  Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[4]\u001b[39m\u001b[32m, line 6\u001b[39m\n\u001b[32m      3\u001b[39m frequency=\u001b[33m'\u001b[39m\u001b[33mmonthly\u001b[39m\u001b[33m'\u001b[39m\n\u001b[32m      4\u001b[39m year=\u001b[32m2020\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m6\u001b[39m test = \u001b[43mDROP\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmodel\u001b[49m\u001b[43m=\u001b[49m\u001b[43mmodel\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mexp\u001b[49m\u001b[43m=\u001b[49m\u001b[43mexp\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msource\u001b[49m\u001b[43m=\u001b[49m\u001b[43msource\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mvar\u001b[49m\u001b[43m=\u001b[49m\u001b[43mvar\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43moutdir\u001b[49m\u001b[43m=\u001b[49m\u001b[43moutdir\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m      7\u001b[39m \u001b[43m                     \u001b[49m\u001b[43mresolution\u001b[49m\u001b[43m=\u001b[49m\u001b[43mresolution\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mfrequency\u001b[49m\u001b[43m=\u001b[49m\u001b[43mfrequency\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mloglevel\u001b[49m\u001b[43m=\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43minfo\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[32m      8\u001b[39m test.retrieve()\n\u001b[32m      9\u001b[39m test.data = test.data.sel(time=test.data.time.dt.year == year)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m/pfs/lustrep3/users/cadaumar/AQUA/src/aqua/drop/drop.py:113\u001b[39m, in \u001b[36mDROP.__init__\u001b[39m\u001b[34m(self, catalog, model, exp, source, var, configdir, resolution, frequency, fix, outdir, tmpdir, nproc, loglevel, region, drop, overwrite, definitive, performance_reporting, rebuild, exclude_incomplete, stat, compact, cdo_options, **kwargs)\u001b[39m\n\u001b[32m     66\u001b[39m \u001b[38;5;250m\u001b[39m\u001b[33;03m\"\"\"\u001b[39;00m\n\u001b[32m     67\u001b[39m \u001b[33;03mInitialize the DROP class\u001b[39;00m\n\u001b[32m     68\u001b[39m \n\u001b[32m   (...)\u001b[39m\u001b[32m    109\u001b[39m \u001b[33;03m    **kwargs:                kwargs to be sent to the Reader, as 'zoom' or 'realization'\u001b[39;00m\n\u001b[32m    110\u001b[39m \u001b[33;03m\"\"\"\u001b[39;00m\n\u001b[32m    112\u001b[39m \u001b[38;5;66;03m# Check mandatory parameters\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m113\u001b[39m \u001b[38;5;28mself\u001b[39m.catalog = \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_require_param\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcatalog\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mcatalog\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[32m    114\u001b[39m \u001b[38;5;28mself\u001b[39m.model = \u001b[38;5;28mself\u001b[39m._require_param(model, \u001b[33m\"\u001b[39m\u001b[33mmodel\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m    115\u001b[39m \u001b[38;5;28mself\u001b[39m.exp = \u001b[38;5;28mself\u001b[39m._require_param(exp, \u001b[33m\"\u001b[39m\u001b[33mexperiment\u001b[39m\u001b[33m\"\u001b[39m)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m/pfs/lustrep3/users/cadaumar/AQUA/src/aqua/drop/drop.py:209\u001b[39m, in \u001b[36mDROP._require_param\u001b[39m\u001b[34m(param, name, msg)\u001b[39m\n\u001b[32m    207\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m param \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[32m    208\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m param\n\u001b[32m--> \u001b[39m\u001b[32m209\u001b[39m \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(msg \u001b[38;5;129;01mor\u001b[39;00m \u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mPlease specify \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mname\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m.\u001b[39m\u001b[33m\"\u001b[39m)\n",
+      "\u001b[31mKeyError\u001b[39m: 'Please specify catalog.'"
      ]
     }
    ],
@@ -121,7 +102,7 @@
     "frequency='monthly'\n",
     "year=2020\n",
     "\n",
-    "test = LRAgenerator(model=model, exp=exp, source=source, var=var, outdir=outdir,\n",
+    "test = DROP(model=model, exp=exp, source=source, var=var, outdir=outdir,\n",
     "                     resolution=resolution, frequency=frequency, loglevel='info')\n",
     "test.retrieve()\n",
     "test.data = test.data.sel(time=test.data.time.dt.year == year)\n",
@@ -146,13 +127,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "frequency='daily'\n",
     "\n",
-    "test_run = LRAgenerator(model=model, exp=exp, source=source, var=var, outdir=outdir,\n",
+    "test_run = DROP(model=model, exp=exp, source=source, var=var, outdir=outdir,\n",
     "                            resolution=resolution, frequency=frequency, definitive=True)"
    ]
   },
@@ -166,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -737,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -759,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -776,7 +757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1242,7 +1223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1259,18 +1240,11 @@
    "source": [
     "file[var].isel(time=0).aqua.plot_single_map()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "aqua",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1284,7 +1258,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
