Add figures in seaice timeseries notebook

--- a/notebooks/diagnostics/seaice/seaice_2d.ipynb
+++ b/notebooks/diagnostics/seaice/seaice_2d.ipynb
@@ -15,7 +15,7 @@
    "source": [
     "To avoid excessive repetition of the same code for loading/computing of the data,  \n",
     "\n",
-    ">[So please refer back to the `seaice.ipynb` notebook for the loading of the data].  \n",
+    ">Please refer back to the `seaice.ipynb` notebook for the loading of the data.  \n",
     "\n",
     "The class method `plot_2d_seaice` automatically adjusts the plotting settings based on the value of the `method` argument,  \n",
     "which can be either `fraction` or `thickness`. The class computes the monthly climatology of the dataset over the available time period.  \n",
@@ -36,7 +36,10 @@
     "\n",
     "### Plotting method: fraction\n",
     "\n",
-    "Set `method='fraction'` to plot the sea ice fraction bias maps."
+    "Set `method='fraction'` and `plot_type='bias'` to plot the sea ice fraction bias maps.  \n",
+    "\n",
+    "As mentioned in the documentation, it is possible to provide a set of projections trough the `projkw` dictionary as in the example below (check documentation for \n",
+    "all the available projections).  "
    ]
   },
   {
@@ -61,9 +64,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As mentioned in the documentation, it is possible to provide a set of projections trough the `projkw` dictionary as in the example below (check documentation for \n",
-    "all the available projections).  \n",
-    "Furthermore, it is possible to set the lat-lon boundaries of the plotted regions, allowing for a refined 'zoom' of the desired area using the `extent_regions` parameter."
+    "in `projkw`, it is possible to set the lat-lon boundaries of the plotted regions, allowing for a refined 'zoom' of the desired area using the `extent_regions` parameter."
    ]
   },
   {
