AddFile: notebook for seasonal cycle and update timeseries text

--- a/notebooks/diagnostics/seaice/seaice_timeseries.ipynb
+++ b/notebooks/diagnostics/seaice/seaice_timeseries.ipynb
@@ -172,12 +172,10 @@
    "source": [
     "### Calculate: reference sea ice surface extent \n",
     "\n",
-    "The same must be done for the observations (reference data).  \n",
-    "Since we want to plot both the 'arctic' and 'antarctic' region, we need to load both the data Northern \n",
-    "and Southern Hemisphere separately due to how OSI-SAF provide these datasets.  \n",
-    "Then to compute the sea ice extent. We also want to calculate the standard deviation for the observations for an improved comparison of the model against onservations.  \n",
-    "Since only the plotting of the monthly timeseries is supported at the moment for the sea ice, we must set `calc_std_freq = 'monthly'`. This will create also datasets \n",
-    "with the std calcualted from the data."
+    "The same steps must be applied to the observations (reference data). Since we want to plot both the Arctic and Antarctic regions, we need to load the Northern   \n",
+    "and Southern Hemisphere data separately, as OSI-SAF provides these datasets individually. To enable a fairer comparison of model performance against observations,   \n",
+    "the reference sea ice extent standard deviation can be calculated, so set `calc_std_freq='monthly'` to generate the additional datasets with the standard deviation computed from the data.  \n",
+    "At present, only monthly time series plotting is supported for sea ice.  \n"
    ]
   },
   {
@@ -500,7 +498,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.11"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
