Further DROP renames on AQUA

--- a/notebooks/diagnostics/ecmean/ecmean-destine.ipynb
+++ b/notebooks/diagnostics/ecmean/ecmean-destine.ipynb
@@ -58,7 +58,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now you can load the data from the LRA, looping on the two models and running the performance indices. The operation should take about less than 1 minute. Parallel processing can be used (not with dask rather with multiproc)"
+    "Now you can load the LRA (Low Resolution Archive) data looping on the two models and running the performance indices. The operation should take about less than 1 minute. Parallel processing can be used (not with dask rather with multiproc)"
    ]
   },
   {
