--- a/notebooks/reader/main.ipynb
+++ b/notebooks/reader/main.ipynb
@@ -19,7 +19,7 @@
     "\n",
     "On top of data access, the `Reader` includes also other functionalities: regridding, time and spatial averaging and metadata correction. Since streaming is not yet available, a streaming emulator has been introduced and can used to mimic streaming.\n",
     "\n",
-    "All these features can be used by the frontier diagnostics when they get real time data. Alternatively, some data have been included in the *Low Resolution Archive* (LRA), which is being built for each experiments and includes variable on monthly frequency, coarse grid and common metadata. State-of-the-art diagnostics can build on the LRA directly.\n",
+    "All these features can be used by the frontier diagnostics when they get real time data. Alternatively, some data have been included in the *Low Resolution Archive* (LRA), which is being built by the Data Reduction OPerator (DROP) AQUA tool for each experiments and includes variable on monthly frequency, coarse grid and common metadata. State-of-the-art diagnostics can build on the LRA directly.\n",
     "\n",
     "The idea of the regridder (which uses sparse matrix multiplication) is to generate first the weights for the interpolation (an operation which needs to be done only once) and then to use them for each regridding operation. For regridding to work you will need the external [smmregrid](https://github.com/jhardenberg/smmregrid) module in your environment."
    ]
@@ -2902,7 +2902,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Modifying the `Reader` 3-level hierarchy, we can also access directly data from the LRA, in this case below for WOA18."
+    "Modifying the `Reader` 3-level hierarchy, we can also access other DROP-generated data, in this case below for WOA18."
    ]
   },
   {
