--- a/notebooks/reader/main.ipynb
+++ b/notebooks/reader/main.ipynb
@@ -35,9 +35,10 @@
     "2. [Coordinate, variable name, units fixer](fixer.ipynb)\n",
     "2. [Temporal averaging](timmean.ipynb)\n",
     "3. [Spatial (field) averaging](fldmean.ipynb)\n",
-    "4. [Other datasets](datasets.ipynb)\n",
-    "5. [Streaming](streaming.ipynb)\n",
-    "6. [Accessor](accessor.ipynb)"
+    "4. [FldStat methods](fldstat.ipynb)\n",
+    "5. [Other datasets](datasets.ipynb)\n",
+    "6. [Streaming](streaming.ipynb)\n",
+    "7. [Accessor](accessor.ipynb)"
    ]
   },
   {
