--- a/diagnostics/ssh/notebooks/ssh_example_outputs.ipynb
+++ b/diagnostics/ssh/notebooks/ssh_example_outputs.ipynb
@@ -786,9 +786,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "aqua",
    "language": "python",
-   "name": "python3"
+   "name": "aqua"
   },
   "language_info": {
    "codemirror_mode": {
@@ -800,7 +800,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
