--- a/notebooks/diagnostics/ocean3d/hovmoller.ipynb
+++ b/notebooks/diagnostics/ocean3d/hovmoller.ipynb
@@ -139,9 +139,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "aqua",
    "language": "python",
-   "name": "python3"
+   "name": "aqua"
   },
   "language_info": {
    "codemirror_mode": {
@@ -153,7 +153,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
