--- a/notebooks/diagnostics/teleconnections/MJO.ipynb
+++ b/notebooks/diagnostics/teleconnections/MJO.ipynb
@@ -376,9 +376,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "aqua",
    "language": "python",
-   "name": "python3"
+   "name": "aqua"
   },
   "language_info": {
    "codemirror_mode": {
@@ -390,10 +390,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.10"
-  },
-  "orig_nbformat": 4
+   "version": "3.12.11"
+  }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
