--- a/notebooks/diagnostics/teleconnections/NAO.ipynb
+++ b/notebooks/diagnostics/teleconnections/NAO.ipynb
@@ -1471,9 +1471,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "aqua",
    "language": "python",
-   "name": "python3"
+   "name": "aqua"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1485,7 +1485,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.10"
+   "version": "3.12.11"
   }
  },
  "nbformat": 4,
